--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -23,6 +23,7 @@ textarea {
 	margin-bottom: 10px;
 }
 
+
 /* typography */
 
 h1, h2, h3, h4, h5, h6 {
@@ -50,6 +51,7 @@ p {
 	line-height: 1.7em;
 }
 
+
 /* header */
 
 #logo {
@@ -66,4 +68,37 @@ p {
 #logo:hover {
 	color: #fff;
 	text-decoration: none;
+	}
+
+
+
+/* footer */
+
+footer {
+	margin: 45px auto 0px;
+	padding-top: 5px;
+	border-top: 1px solid #eaeaea;
+	color: #777;
+}
+
+footer a {
+	color: #555;
+}
+
+footer a:hover {
+	color: #222;
+}
+
+footer small {
+	float: left;
+}
+
+footer ul {
+	float: right;
+	list-style: none;
+}
+
+footer ul li {
+	float: left;
+	margin-left: 15px;
 }
