--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html>  
   <head>
     <title><%= full_title(yield(:title)) %></title>
-    <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag    'application', media: 'all',
-                                              'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= render "layouts/shiv" %>
+    <%= render 'layouts/rails_default' %>
+    <%= render 'layouts/shiv' %>
   </head>
   <body>
     <%= render "layouts/header" %>
